[package]
name = "tsar-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tsar"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.0", features = ["extension-module"] }
rayon = "1.5.3"
tsar-rs = { path = "../tsar-rs" }
