[build-system]
requires = ["maturin>=0.13,<1.9"]
build-backend = "maturin"

[project]
name = "tsar-py"
version = "0.1.0"
requires-python = ">=3.7"
dependencies = ["onnx>=1.13.0,<2"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.scripts]
tsar-pack = "tsar.tools.pack:main"
tsar-unpack = "tsar.tools.unpack:main"

[tool.pylint]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "invalid-name",
    "too-many-positional-arguments",
]
extension-pkg-allow-list = ["tsar.tsar"]
generated-members = ["onnx.*Proto"]

[tool.black]
target-version = ["py36"]

[tool.mypy]

[[tool.mypy.overrides]]
module = [
    "onnx",
]
ignore_missing_imports = true
