[package]
name = "tsar-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "tsar"
path = "src/lib.rs"

[dependencies]
base64 = "0.13.0"
half = { version = "2.1.0", features = ["num-traits"] }
num-traits = "0.2.15"
protobuf = "3.1.0"
sha1 = "0.10.1"
smallvec = "1.9.0"
thiserror = "1.0.31"
zip = { version = "0.6.2", default-features = false, features = ["deflate"] }
zstd = "0.12.0"

[target.'cfg(windows)'.dependencies]
zfp-sys-cc = "0.1.3"

[target.'cfg(unix)'.dependencies]
zfp-sys = { version = "0.1.11", features = ["static"]}

[dev-dependencies]
byteorder = "1.4.3"
bytes = "1.2.0"
criterion = "0.4.0"

[build-dependencies]
protobuf-codegen = "3.1.0"

[[bench]]
name = "compress"
harness = false
