[package]
name = "tsar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
half = { version = "2.0.0", features = ["num-traits"] }
num-traits = "0.2.15"
object-pool = "0.5.4"
parking_lot = "0.12.1"
smallvec = "1.9.0"
zstd = "0.11.2"

[dev-dependencies]
byteorder = "1.4.3"
bytes = "1.1.0"
criterion = "0.3.5"
rand = "0.8.5"
tempdir = "0.3.7"

[[bench]]
name = "compress"
harness = false
