[package]
name = "tsar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
half = { version = "2.0.0", features = ["num-traits"] }
num-traits = "0.2.15"
object-pool = "0.5.4"
protobuf = "3.1.0"
sha1 = "0.10.1"
smallvec = "1.9.0"
thiserror = "1.0.31"
zip = { version = "0.6.2", default-features = false, features = ["deflate"] }
zstd = "0.11.2"

[dev-dependencies]
byteorder = "1.4.3"
bytes = "1.1.0"
criterion = "0.3.6"

[build-dependencies]
protobuf-codegen = "3.1.0"

[[bench]]
name = "compress"
harness = false
